<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    <TextView 
        style="@style/Title_gray"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/contact_info"/>
	<TextView 
        style="@style/Text_caption"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/sale_name"/>
	<TextView 
        style="@style/Text"
        android:autoLink="map"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/addres"/>
	<TextView 
        style="@style/Title_gray"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/see_map"
        android:layout_marginTop="10dip"/>
    <TextView 
        style="@style/Text"
        android:autoLink="phone"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/tel1"/>
    <TextView 
        style="@style/Text"
        android:autoLink="phone"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/tel2"/>
    <TextView 
        style="@style/Text"
        android:autoLink="phone"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/tel3"/>
    <TextView 
        style="@style/Text"
        android:autoLink="phone"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/tel4"/>
    
    <LinearLayout 
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView 
        style="@style/Text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/icq"/>
        <TextView 
        style="@style/Text"
        android:id="@+id/icq1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/icq1"/>
    </LinearLayout>
    
        <LinearLayout 
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView 
        style="@style/Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/icq"/>
        <TextView 
        style="@style/Text"
        android:id="@+id/icq2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/icq2"/>
    </LinearLayout>
    
        <TextView 
        style="@style/Title_gray"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/ask_callback"
        android:layout_marginTop="10dip"/>
        
        <TextView 
        style="@style/Text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/email"/>
        <TextView 
        style="@style/Text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:autoLink="email"
        android:text="@string/mail1"/>
        
        <TextView 
        style="@style/Title_gray"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"/>
</LinearLayout>