<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
    android:gravity="center_horizontal">
    
    <TextView style="@style/Dialog_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/you_plan_come" />
    <DatePicker 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/date_picker"/>
    <TimePicker 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/time_picker"/>"
    <CheckBox style="@style/Dialog_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/precision_time"
        android:id="@+id/precision_time"/>
    
      <Button style="@style/Dialog_button_yes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/set_time_button"
        android:text="@string/set_time_button"/>"
</LinearLayout>