<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="150dip"
    android:orientation="vertical" >
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="40dip"
    android:orientation="vertical">
    <TextView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/item_name"
    android:layout_width="wrap_content"
    android:layout_height="fill_parent"
    android:gravity="bottom"
    android:paddingLeft="10dip"
    android:layout_alignParentLeft="true"
    style="@style/Large_common"
    android:text="Test_item"/>
    <TextView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/item_cost_scale"
    android:layout_width="wrap_content"
    android:layout_height="fill_parent"
    android:gravity="bottom"
    android:layout_alignParentRight="true"
    android:text="usd"
    android:paddingLeft="15dip"
    android:paddingRight="15dip"
    style="@style/Small_common"/>
    <TextView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/item_cost"
    android:layout_width="wrap_content"
    android:layout_height="fill_parent"
    android:gravity="bottom"
    android:layout_toLeftOf="@id/item_cost_scale"
    android:text="999.0"
    style="@style/Large_common"/>
    </RelativeLayout>  
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">
<ImageView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/item_image"
    android:layout_width="80dip"
    android:layout_height="80dip"
    android:layout_alignParentLeft="true"/>
    <TextView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/item_description"
    android:layout_width="fill_parent"
    android:layout_height="80dip"
    android:padding="3dip"
    android:layout_toRightOf="@id/item_image"
    android:text="This is test description.This is test description.This is test description."
    style="@style/Small_common"/>
</RelativeLayout>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="50dip"
    android:orientation="vertical"
    android:background="@drawable/gray_title_grad">
<CheckBox xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/Dialog_checkbox"
    android:id="@+id/btn_compare"    
    android:layout_width="150dip"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:focusable="false"
	android:text="@string/check_compare"/>
	<CheckBox xmlns:android="http://schemas.android.com/apk/res/android"
	    style="@style/Dialog_checkbox"
    android:id="@+id/btn_best"  
    android:layout_width="150dip"
    android:layout_height="fill_parent"
    android:orientation="vertical"    
    android:layout_toRightOf="@id/btn_compare"
    android:focusable="false"
    android:text="@string/check_best"/>
<CheckBox xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/Dialog_checkbox"
    android:id="@+id/btn_basket"  
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:layout_toRightOf="@+id/btn_best"
    android:focusable="false"
    android:text="@string/check_basket"/>
</RelativeLayout>
</LinearLayout>